fix: dark mode style (#21)

--- a/src/renderer/src/assets/base.css
+++ b/src/renderer/src/assets/base.css
@@ -7,14 +7,6 @@ body,
   font-family: "SN Pro", sans-serif;
 }
 
-.drag-region {
-  -webkit-app-region: drag;
-}
-
-.no-drag-region {
-  -webkit-app-region: no-drag;
-}
-
 button,
 a {
   @apply cursor-default;
